--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <button class="hero-btn"><a href="#bikes">Shop Now</a></button>
       </div>
     </div>
-    <img src="/assets/images/hero-02.jpg" alt="Hero Image" class="hero-img-left">
-    <img src="/assets/images/hero-02.jpg" alt="Hero Image" class="hero-img-right">
+    <img src="assets/images/hero-02.jpg" alt="Hero Image" class="hero-img-left">
+    <img src="assets/images/hero-02.jpg" alt="Hero Image" class="hero-img-right">
   </section>
 
   <section class="about" id="about">
@@ -53,7 +53,7 @@
     </div>
     <div class="about-image">
       <div class="about-img-container">
-        <img src="/assets/images/About.png" alt="Bike Image" class="about-img">
+        <img src="assets/images/About.png" alt="Bike Image" class="about-img">
       </div>
 
     </div>
@@ -106,8 +106,8 @@
       <h2>Why They Ride with Us</h2>
       <p>“Our riders&apos; stories - from daily commuters to weekend explorers - fuel our passion to keep innovating.<span>Join the Ride — Hear Their Stories.</span>”
       </p>
-      <button class="reviews-btn-prev reviews-btn "><img src="/assets/icons/arrowback.png" alt="" class="reviews-icons"></button>
-      <button class="reviews-btn-next reviews-btn"><img src="/assets/icons/arrowfoward.png" alt="" class="reviews-icons"></button>
+      <button class="reviews-btn-prev reviews-btn "><img src="assets/icons/arrowback.png" alt="" class="reviews-icons"></button>
+      <button class="reviews-btn-next reviews-btn"><img src="assets/icons/arrowfoward.png" alt="" class="reviews-icons"></button>
     </div>
       <div class="reviews-container">
         <div class="reviews-view">
@@ -177,25 +177,25 @@
     </div>
     <div class="partners-container">
       <div class="partners-logos">
-        <img src="/assets/logos/yakimaLogo.png" alt="yakima" class="partners-logo">
-        <img src="/assets/logos/podpointlogo.png" alt="podpoint" class="partners-logo">
-        <img src="/assets/logos/deliveroologo.png" alt="deliveroo" class="partners-logo">
-        <img src="/assets/logos/gologo.png" alt="goOutdoors" class="partners-logo">
-        <img src="/assets/logos/puregymlogo.png" alt="puregym" class="partners-logo">
-        <img src="/assets/logos/rei.png" alt="rei" class="partners-logo">
-        <img src="/assets/logos/uber.png" alt="uber" class="partners-logo">
-        <img src="/assets/logos/veloflix.png" alt="veloflix" class="partners-logo">
-        <img src="/assets/logos/zedifylogo.png" alt="zedify" class="partners-logo">
+        <img src="assets/logos/yakimaLogo.png" alt="yakima" class="partners-logo">
+        <img src="assets/logos/podpointlogo.png" alt="podpoint" class="partners-logo">
+        <img src="assets/logos/deliveroologo.png" alt="deliveroo" class="partners-logo">
+        <img src="assets/logos/gologo.png" alt="goOutdoors" class="partners-logo">
+        <img src="assets/logos/puregymlogo.png" alt="puregym" class="partners-logo">
+        <img src="assets/logos/rei.png" alt="rei" class="partners-logo">
+        <img src="assets/logos/uber.png" alt="uber" class="partners-logo">
+        <img src="assets/logos/veloflix.png" alt="veloflix" class="partners-logo">
+        <img src="assets/logos/zedifylogo.png" alt="zedify" class="partners-logo">
 
-        <img src="/assets/logos/yakimaLogo.png" alt="yakima" class="partners-logo">
-        <img src="/assets/logos/podpointlogo.png" alt="podpoint" class="partners-logo">
-        <img src="/assets/logos/deliveroologo.png" alt="deliveroo" class="partners-logo">
-        <img src="/assets/logos/gologo.png" alt="goOutdoors" class="partners-logo">
-        <img src="/assets/logos/puregymlogo.png" alt="puregym" class="partners-logo">
-        <img src="/assets/logos/rei.png" alt="rei" class="partners-logo">
-        <img src="/assets/logos/uber.png" alt="uber" class="partners-logo">
-        <img src="/assets/logos/veloflix.png" alt="veloflix" class="partners-logo">
-        <img src="/assets/logos/zedifylogo.png" alt="zedify" class="partners-logo">
+        <img src="assets/logos/yakimaLogo.png" alt="yakima" class="partners-logo">
+        <img src="assets/logos/podpointlogo.png" alt="podpoint" class="partners-logo">
+        <img src="assets/logos/deliveroologo.png" alt="deliveroo" class="partners-logo">
+        <img src="assets/logos/gologo.png" alt="goOutdoors" class="partners-logo">
+        <img src="assets/logos/puregymlogo.png" alt="puregym" class="partners-logo">
+        <img src="assets/logos/rei.png" alt="rei" class="partners-logo">
+        <img src="assets/logos/uber.png" alt="uber" class="partners-logo">
+        <img src="assets/logos/veloflix.png" alt="veloflix" class="partners-logo">
+        <img src="assets/logos/zedifylogo.png" alt="zedify" class="partners-logo">
       </div>
     </div>
    
@@ -259,7 +259,7 @@
     <h2>Our FAQ Section</h2>
     <p>Everything you need to know before hitting the road.Your bike journey starts with the right information</p>
     <div class="faq-image-container">
-      <img src="/assets/images/faq.png" alt="" class="faq-image">
+      <img src="assets/images/faq.png" alt="" class="faq-image">
     </div>
   </div>
 
@@ -336,16 +336,16 @@
         <p><span class="contact-us-txt">Visit us: </span> 48 Harmony Street, London NW3 5JY, UK</p>
         <div class="contact-us-icons">
           <a href="https://linkedin.com/" target="_blank">
-            <img src="/assets/icons/linkedin.png" alt="LinkedIn" class="contact-us-icon">
+            <img src="assets/icons/linkedin.png" alt="LinkedIn" class="contact-us-icon">
           </a>
           <a href="https://x.com/" target="_blank">
-            <img src="/assets/icons/x.png" alt="X" class="contact-us-icon">
+            <img src="assets/icons/x.png" alt="X" class="contact-us-icon">
           </a>
           <a href="https://www.instagram.com/" target="_blank">
-            <img src="/assets/icons/instagram.png" alt="Instagram" class="contact-us-icon">
+            <img src="assets/icons/instagram.png" alt="Instagram" class="contact-us-icon">
           </a>
           <a href="https://www.facebook.com/" target="_blank">
-            <img src="/assets/icons/facebook.png" alt="Facebook" class="contact-us-icon">
+            <img src="assets/icons/facebook.png" alt="Facebook" class="contact-us-icon">
           </a>
         </div>
       </div>
