--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
   <header>
     <div class="nav-left">
-        <li><a href="">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#bikes">Bikes</a></li>
+        <li class="nav1"><a href="">Home</a></li>
+        <li class="nav2"><a href="#about">About</a></li>
+        <li class="nav3"><a href="#bikes">Bikes</a></li>
     </div>
   
    <div class="logo">
     <h1>GEOCRUZe</h1>
    </div>
     <div class="nav-right">
-        <li><a href="#parts">Parts</a></li>
-        <li><a href="#community">Community</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li class="nav4"><a href="#parts">Parts</a></li>
+        <li class="nav5"><a href="#community">Community</a></li>
+        <li class="nav6"><a href="#contact">Contact</a></li>
    </div>
   </header>
 
@@ -94,7 +94,10 @@
         Smart features like pedal assist, LCD displays, and disc brakes
       make every ride efficient, intuitive, and truly enjoyable.
       </p>
-      <button class="build-btn">Learn More</button>
+      <div class="build-btn-container">
+        <button class="build-btn">Learn More</button>
+      </div>
+      
     </div>
     <div class="build-details-divider"></div>
    
@@ -209,7 +212,7 @@
       </p>
     </div>
     <div class="parts-acc-merch-container">
-      <div class="parts">
+      <div class="parts parts-item">
         <h2>Parts</h2>
         <p>Keep your bike in peak condition with durable, high-performance components built to last.
         </p>
@@ -217,7 +220,7 @@
           <button class="parts-btn"><a href="">Shop Parts</a></button>
         </div>
       </div>
-      <div class="accessories">   
+      <div class="accessories parts-item">   
         <h2>Accessories</h2>
         <p>Keep your bike in peak condition with durable, high-performance components built to last.
         </p>
@@ -226,7 +229,7 @@
         </div>
         
       </div>
-      <div class="merch">
+      <div class="merch parts-item">
         <h2>Merchandise</h2>
         <p>Keep your bike in peak condition with durable, high-performance components built to last.
         </p>
@@ -333,7 +336,7 @@
         <h2>Contact Us:</h2>
         <p><span class="contact-us-txt">Email: </span> support@geocruze.com</p>
         <p><span class="contact-us-txt">Call Center: </span> +44 9876-543210</p>
-        <p><span class="contact-us-txt">Visit us: </span> 48 Harmony Street, London NW3 5JY, UK</p>
+        <p><span class="contact-us-txt">Visit us: </span> 48 Harmony Street, London, UK</p>
         <div class="contact-us-icons">
           <a href="https://linkedin.com/" target="_blank">
             <img src="assets/icons/linkedin.png" alt="LinkedIn" class="contact-us-icon">
@@ -402,7 +405,6 @@
      <div class="footer-action-btn">
       <button class="footer-btn"><a href="#shopnow">Get Yours Now</a></button>
      </div>
-
   </div>
   
 </footer>
