--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
         <li class="nav5"><a href="#community">Community</a></li>
         <li class="nav6"><a href="#contact">Contact</a></li>
    </div>
+   <div class="menuIconBox">
+    <img src="assets/icons/menu.png" alt="" class="menuIcon"> 
+   </div>
   </header>
+
+ <div class="menu">
+      <li><a href="">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#gear">Gear</a></li>
+      <li><a href="#accessories">Accessories</a></li>
+      <li><a href="#community">Community</a></li>
+      <li><a href="#contact">Contact</a></li>
+  </div>
 
   <section class="hero" id="home">
     <div class="hero-left"></div>
